src/test/deca/context/valid/print_float.deca
// Description :
// test de l'affichage d'un flottant
//
// Résultats :
// ok

{
  println(5.0);
}
